# panimg

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md
.github/workflows/: ci.yml  release.yml
benches/: .gitignore  README.md
benches/results/: REPORT.md
benches/scripts/: bench_batch.sh  bench_memory.sh  bench_pipeline.sh  bench_quality.sh  bench_single.sh  report.py  setup.sh
crates/pan-common/: Cargo.toml
crates/pan-common/src/: error.rs  lib.rs  output.rs  pipeline.rs
crates/panimg-cli/: Cargo.toml
crates/panimg-cli/src/: app.rs  main.rs  output.rs
crates/panimg-cli/src/commands/: animate.rs  batch.rs  blur.rs  brightness.rs  common.rs  contrast.rs  convert.rs  crop.rs  diff.rs  draw.rs  edge_detect.rs  emboss.rs  flip.rs  frames.rs  gif_speed.rs  grayscale.rs  hue_rotate.rs  info.rs  invert.rs  mod.rs  orient.rs  overlay.rs  pdf_pages.rs  pipeline.rs  posterize.rs  psd_info.rs  psd_layers.rs  resize.rs  rotate.rs  saturate.rs  sepia.rs  set_density.rs  sharpen.rs  smart_crop.rs  text.rs  tilt_shift.rs  tint.rs  tiny.rs  trim.rs
crates/panimg-cli/tests/: integration.rs
crates/panimg-core/: Cargo.toml
crates/panimg-core/benches/: resize_bench.rs
crates/panimg-core/src/: color.rs  compress.rs  error.rs  format.rs  icc.rs  info.rs  lib.rs  pdf.rs  pipeline.rs  psd.rs  recipe.rs  resolution.rs  schema.rs
crates/panimg-core/src/codec/: mod.rs
crates/panimg-core/src/ops/: animation.rs  blur.rs  brightness.rs  color.rs  contrast.rs  crop.rs  diff.rs  draw.rs  edge_detect.rs  emboss.rs  flip.rs  grayscale.rs  hue_rotate.rs  invert.rs  mod.rs  orient.rs  overlay.rs  position.rs  resize.rs  rotate.rs  sharpen.rs  smart_crop.rs  text.rs  tilt_shift.rs  trim.rs
crates/panimg-core/tests/: compress.rs  heic_decode.rs  pdf_codec.rs  psd_decode.rs
crates/panimg-core/tests/fixtures/: test.heic  test.psd  test_alpha.heic
docs/: ai-integration.md  commands.md  formats.md
docs/decisions/: adr-001-set-density-command-naming.md
docs/ja/: ai-integration.md  commands.md  formats.md
docs/zh-CN/: ai-integration.md  commands.md  formats.md
docs/zh-TW/: ai-integration.md  commands.md  formats.md
visual-tests/: README.md  run.sh
