[workspace]
members = ["crates/panimg-core", "crates/panimg-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tzengyuxio/panimg"
keywords = ["image", "cli", "convert", "resize", "processing"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[workspace.dependencies]
# Image processing
image = "0.25"
fast_image_resize = "6.0"
kamadak-exif = "0.6"

# Optional codecs
ravif = "0.13"
jxl-oxide = "0.12"
resvg = "0.47"
hayro = "0.5"
libheif-rs = "2.7"

# Compression optimization
imagequant = "4"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
png = "0.18"

# Text rendering
ab_glyph = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# File matching
glob = "0.3"

# ICC color management
lcms2 = "6"
flate2 = "1"

# Concurrency
rayon = "1.11"

# Progress
indicatif = "0.18"

# Internal crates
panimg-core = { path = "crates/panimg-core", version = "0.3.0" }
