[package]
name = "pan-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared infrastructure for the pan-family CLI tools"
repository.workspace = true

[features]
default = []
clap = ["dep:clap"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, optional = true }
