[package]
name = "panimg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Next-generation image processing CLI"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "panimg"
path = "src/main.rs"

[features]
default = ["text"]
avif = ["panimg-core/avif"]
jxl = ["panimg-core/jxl"]
svg = ["panimg-core/svg"]
text = ["panimg-core/text"]
all-codecs = ["avif", "jxl", "svg"]
all-features = ["all-codecs", "text"]

[dependencies]
panimg-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
image = { workspace = true }
serde_json = { workspace = true }
