[package]
name = "panimg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Swiss Army knife of image processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "panimg"
path = "src/main.rs"

[features]
default = ["text", "tiny", "icc"]
avif = ["panimg-core/avif"]
jxl = ["panimg-core/jxl"]
svg = ["panimg-core/svg"]
pdf = ["panimg-core/pdf"]
heic = ["panimg-core/heic"]
psd = ["panimg-core/psd"]
text = ["panimg-core/text"]
tiny = ["panimg-core/tiny"]
icc = ["panimg-core/icc"]
all-codecs = ["avif", "jxl", "svg", "pdf", "psd"]
all-features = ["all-codecs", "text", "tiny", "icc"]

[dependencies]
pan-common = { workspace = true, features = ["clap"] }
panimg-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
image = { workspace = true }
serde_json = { workspace = true }
