[package]
name = "panimg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for panimg image processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
avif = ["dep:ravif"]
jxl = ["dep:jxl-oxide"]
svg = ["dep:resvg"]
text = ["dep:ab_glyph"]

[dependencies]
image = { workspace = true }
fast_image_resize = { workspace = true }
kamadak-exif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Optional codec dependencies
ravif = { workspace = true, optional = true }
jxl-oxide = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }

# Optional text rendering
ab_glyph = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
