[package]
name = "panimg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for panimg image processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
avif = ["dep:ravif"]
jxl = ["dep:jxl-oxide"]
svg = ["dep:resvg"]
pdf = ["dep:hayro"]
heic = ["dep:libheif-rs"]
psd = ["dep:psd"]
text = ["dep:ab_glyph"]
tiny = ["dep:imagequant", "dep:oxipng", "dep:png"]
icc = ["dep:lcms2", "dep:flate2"]

[dependencies]
pan-common = { workspace = true }
image = { workspace = true }
fast_image_resize = { workspace = true }
kamadak-exif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
img-parts = { workspace = true }

# Optional codec dependencies
ravif = { workspace = true, optional = true }
jxl-oxide = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }
hayro = { workspace = true, optional = true }
psd = { workspace = true, optional = true }

# Optional text rendering
ab_glyph = { workspace = true, optional = true }

# Optional compression optimization
imagequant = { workspace = true, optional = true }
oxipng = { workspace = true, optional = true }
png = { workspace = true, optional = true }

# Optional ICC color management
lcms2 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

# HEIC support (Apple platforms only — requires system libheif >= 1.21)
[target.'cfg(target_vendor = "apple")'.dependencies]
libheif-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "resize_bench"
harness = false
